test/fails/bad_tags/decl5.lgl
tag a is vec<2>;
tag b is a;
tag a is b;  // Cannot redeclare tags / cannot create a loop